--- a/veracity.html
+++ b/veracity.html
@@ -1329,7 +1329,7 @@
         </div>
     </div>
 
-    <script src="api/veritas-translations.js"></script>
+    <script src="modules/veritas-translations.js"></script>
     <script src="modules/classifier.js"></script>
     <script src="modules/factoids.js"></script>
     <script src="modules/microdiscovery.js"></script>
@@ -1787,7 +1787,7 @@ Respond ONLY with valid JSON (no markdown, no code blocks):
             );
         }
 
-        // Language selector handled by api/veritas-translations.js
+        // Language handled by modules/veritas-translations.js
     </script>
 </body>
 </html>
