--- a/veracity.html
+++ b/veracity.html
@@ -599,7 +599,7 @@
             font-weight: 600;
             color: var(--text-primary);
             letter-spacing: 0.5px;
-            cursor: help;
+            cursor: pointer;
             transition: filter 0.2s;
             border-radius: 0 6px 6px 0;
             border: 1px solid rgba(255,255,255,0.05);
