--- a/veracity.html
+++ b/veracity.html
@@ -1954,7 +1954,7 @@
                 <span data-i18n="settings">SETTINGS</span>
             </div>
             <div class="top-middle">
-                <span id="mainTitle">VERITAS - Truth Through Transparency</span>
+                <span id="mainTitle">VERITAS - Truth Through Transparency v2.1-FIXED</span>
                 <div class="language-selector" style="margin-left: 20px;">
                     <select id="languageSelect" title="Universal Translator - Select Your Language">
                         <option value="en">🌐 English</option>
