--- a/veracity.html
+++ b/veracity.html
@@ -2108,10 +2108,10 @@
                         <div class="input-helper">
                             <div class="helper-text" id="helperText" data-i18n="helperText">Try one of these examples to see how Veracity works:</div>
                             <div class="quick-examples">
-                                <span class="example-chip" id="chip1" data-i18n="chip1" data-input="Is it true that vaccines cause autism?">vaccines &amp; autism</span>
-                                <span class="example-chip" id="chip2" data-i18n="chip2" data-input="Why do I feel anxious about the news?">news anxiety</span>
-                                <span class="example-chip" id="chip3" data-i18n="chip3" data-input="How do I know if a source is reliable?">source evaluation</span>
-                                <span class="example-chip" id="chip4" data-i18n="chip4" data-input="Did Einstein really fail math?">Einstein myth</span>
+                                <span class="example-chip" id="chip1" data-i18n="chip1" data-input="Do politicians actually keep their campaign promises?">campaign promises</span>
+                                <span class="example-chip" id="chip2" data-i18n="chip2" data-input="Is mainstream media biased against conservatives?">media bias</span>
+                                <span class="example-chip" id="chip3" data-i18n="chip3" data-input="How do I evaluate statistics in news articles?">evaluating statistics</span>
+                                <span class="example-chip" id="chip4" data-i18n="chip4" data-input="Are corporations doing enough about climate change?">corporate climate action</span>
                             </div>
                         </div>
                         <div class="research-divider" id="researchDivider" data-i18n="researchDivider">OR</div>
