--- a/index.html
+++ b/index.html
@@ -868,6 +868,20 @@
       font-size: 40px;
       margin-bottom: 16px;
       display: block;
+      line-height: 1;
+    }
+
+    .product-card .product-icon img {
+      height: 56px;
+      width: auto;
+      object-fit: contain;
+    }
+
+    .product-card .product-icon svg {
+      height: 48px;
+      width: auto;
+      display: inline-block;
+      vertical-align: middle;
     }
 
     .product-card h3 {
@@ -1767,15 +1781,15 @@
       <div class="product-cards">
         
         <div class="product-card featured">
-          <span class="product-icon">🔍</span>
+          <span class="product-icon"><img src="Veracity_Logo.png" alt="VERACITY"></span>
           <h3>VERACITY™</h3>
           <p class="tagline">"Your thinking partner"</p>
-          <p class="description">Helps individuals clarify questions and think clearly. Three tracks: Assess facts, Interview beliefs through Socratic dialogue, Navigate difficult conversations.</p>
+          <p class="description">Helps individuals clarify questions and think clearly. Drawing from 6,000 years of global wisdom — philosophical, scientific, and spiritual disciplines — across three tracks: Assess facts, Interview beliefs, Navigate difficult conversations.</p>
           <span class="status live">Live Now</span>
         </div>
 
         <div class="product-card">
-          <span class="product-icon">🐍</span>
+          <span class="product-icon"><svg viewBox="0 0 80 80" xmlns="http://www.w3.org/2000/svg"><path d="M20 8Q8 18 8 32Q8 42 16 47L20 43L24 47Q32 42 32 32Q32 18 20 8Z" fill="#d97706" opacity="0.8"/><path d="M14 32L12 42" stroke="#d97706" stroke-width="2" stroke-linecap="round"/><path d="M26 32L28 42" stroke="#d97706" stroke-width="2" stroke-linecap="round"/><circle cx="52" cy="42" r="14" fill="none" stroke="#d97706" stroke-width="3"/><line x1="62" y1="52" x2="72" y2="62" stroke="#d97706" stroke-width="3" stroke-linecap="round"/></svg></span>
           <h3>VENOM™</h3>
           <p class="tagline">"We hunt the poison"</p>
           <p class="description">Proactively scours platforms to find and expose insidious misinformation. Creates public case studies showing exactly HOW manipulation operates.</p>
@@ -1783,7 +1797,7 @@
         </div>
 
         <div class="product-card">
-          <span class="product-icon">📊</span>
+          <span class="product-icon"><svg viewBox="0 0 80 80" xmlns="http://www.w3.org/2000/svg"><rect x="22" y="18" width="36" height="48" fill="none" stroke="#8b5cf6" stroke-width="2" rx="3"/><line x1="30" y1="30" x2="50" y2="30" stroke="#8b5cf6" stroke-width="1.5" opacity="0.4"/><line x1="30" y1="38" x2="50" y2="38" stroke="#8b5cf6" stroke-width="1.5" opacity="0.4"/><line x1="30" y1="46" x2="42" y2="46" stroke="#8b5cf6" stroke-width="1.5" opacity="0.4"/><path d="M10 55L18 55L22 44L26 60L30 50L34 55L42 55" fill="none" stroke="#8b5cf6" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"/></svg></span>
           <h3>VITAL™</h3>
           <p class="tagline">"Signal from noise"</p>
           <p class="description">Monitors major news stories daily. Separates KNOWN facts from speculation designed to agitate. Shows what we KNOW versus what media is SAYING.</p>
@@ -1791,7 +1805,7 @@
         </div>
 
         <div class="product-card">
-          <span class="product-icon">⚔️</span>
+          <span class="product-icon"><svg viewBox="0 0 80 80" xmlns="http://www.w3.org/2000/svg"><path d="M40 10L56 18L56 38Q56 56 40 68Q24 56 24 38L24 18Z" fill="none" stroke="#14b8a6" stroke-width="2.5"/><path d="M40 16L52 22L52 38Q52 52 40 62Q28 52 28 38L28 22Z" fill="#14b8a6" opacity="0.1"/><path d="M33 40L38 45L48 35" fill="none" stroke="#14b8a6" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/></svg></span>
           <h3>VALOR™</h3>
           <p class="tagline">"Fight without lying"</p>
           <p class="description">Helps people advocate for their beliefs responsibly. Provides verified data and effective arguments—turns passionate people into effective advocates.</p>
